# mantis

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  install.sh  install_pyton.sh  mantis-config.json  pyproject.toml
.github/workflows/: build.yaml
cmake/: MantisConfig.cmake  MantisConfigVersion.cmake
cmake_templates/: MantisConfig.cmake.in  build_info.h.in
docs/: Doxyfile
examples/cpp/: cw_tx.cpp  find_devices.cpp  rx_to_file.cpp  tx_from_file.cpp
examples/python/: cw_tx.py  find_devices.py  rx_to_file.py  tx_from_file.py
include/mantis/: config.h  mantis.h
include/mantis/driver_impl/virtual/socket/: virtual_rx_channel_socket.h  virtual_tx_channel_socket.h
include/mantis/lib/classes/metadata/: async_mtx_metadata.h  mrx_metadata.h  mtx_metadata.h
include/mantis/lib/classes/msdr/: msdr.h  msdr_params.h
include/mantis/lib/device_manager/: device_manager.h
include/mantis/lib/errors/: async_mtx_metadata_errors.h
include/mantis/lib/utilities/: general.h  prints.h
pybind/classes/: mrx_metadata.hpp
pybind/msdr/: msdr_params.hpp
python/: __init__.py  pymantis.cpp
python/pybind/classes/: async_mtx_metadata.hpp  mrx_metadata.hpp  mtx_metadata.hpp  time_tag.hpp
python/pybind/device_manager/: device_manager.hpp
python/pybind/errors/: error_codes.hpp  metadata_errors.hpp
python/pybind/mchannel/: mchannel.hpp  mrx_channel.hpp  mtx_channel.hpp
python/pybind/msdr/: msdr_params.hpp
python/pybind/utilities/: general.hpp  prints.hpp
python/stubs/mantis/: __init__.pyi  metadata_errors.pyi  utils.pyi
scripts/: install.sh  install_deps.sh
src/: config.cpp  mantis.cpp
src/driver_impl/virtual/socket/net_utils/: msocket.cpp
src/lib/classes/: time_tag.cpp
src/lib/classes/metadata/: async_mtx_metadata.cpp  mrx_metadata.cpp  mtx_metadata.cpp
src/lib/classes/msdr/: msdr.cpp  msdr_params.cpp
src/lib/device_manager/: device_manager.cpp
src/lib/utilities/: general.cpp  prints.cpp
